--- a/12/bullseye/docker-compose.yaml
+++ b/12/bullseye/docker-compose.yaml
@@ -7,8 +7,7 @@ services:
     ports:
       - 5432:5432
     volumes:
-      - ./data/data:/var/lib/postgresql/data
-      # ./datasql:/var/lib/postgresql/data
+      - ./data:/var/lib/postgresql/data
     command:
       [
         "postgres",
